recipe page functionality, beginning of comment functionality

--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="globalStyles.css" />
+    <script src="displayRecipe.js"></script>
   </head>
 <body>
   <!-- header & navbar -->
@@ -31,7 +32,7 @@
   <!-- most recent recipes -->
   <div id="index-body my-10">
     <div class="container text-center">
-      <div class="row g-0">
+      <div class="row g-2">
         <div class="container text-start col-9">
           <div id="recipe-holder">
             <h2 class="py-4">Most recent recipes</h2>
@@ -44,8 +45,8 @@
                     alt="filler for image card"
                     width="300"
                   />
-                  <h4>Recipe title</h4>
-                  <p>recipe description</p>
+                  <h4 class="recipe-title">Recipe title</h4>
+                  <p class="recipe-description">recipe description</p>
                 </a>
               </div>
               <div id="recipeCard" class="col">
@@ -56,12 +57,12 @@
                     alt="filler for image card"
                     width="300"
                   />
-                  <h4>Recipe title</h4>
-                  <p>recipe description</p>
+                  <h4 class="recipe-title">Recipe title</h4>
+                  <p class="recipe-description">recipe description</p>
                 </a>
               </div>
             </div>
-            <div id="recent-recipes" class="row justify-content-start">
+            <div id="recent-recipes" class="row g-2 justify-content-start">
               <div id="recipeCard" class="col">
                 <a href="/pages/recipePage.html">
                   <!-- filler image -->
@@ -70,8 +71,8 @@
                     alt="filler for image card"
                     width="300"
                   />
-                  <h4>Recipe title</h4>
-                  <p>recipe description</p>
+                  <h4 class="recipe-title">Recipe title</h4>
+                  <p class="recipe-description">recipe description</p>
                 </a>
               </div>
               <div id="recipeCard" class="col">
@@ -82,8 +83,8 @@
                     alt="filler for image card"
                     width="300"
                   />
-                  <h4>Recipe title</h4>
-                  <p>recipe description</p>
+                  <h4 class="recipe-title">Recipe title</h4>
+                  <p class="recipe-description">recipe description</p>
                 </a>
               </div>
             </div>
