favorite button & websocket support

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="globalStyles.css" />
 
     <script src="login.js"></script>
-    <!-- <link rel="stylesheet" href="index.css" /> -->
+    <script src="favorite.js"></script>
   </head>
   <body>
     <!-- login page -->
@@ -67,7 +67,7 @@
       >
       <div id="heart-container">
         <img
-          id="float-heart"
+          id="footer-heart"
           src="/assets/heart-circle.svg"
           alt="heart icon"
           width="65"
