--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="globalStyles.css" />
     <script src="displayRecipe.js"></script>
+    <script src="favorite.js"></script>
   </head>
 <body>
   <!-- header & navbar -->
@@ -120,7 +121,7 @@
     >
     <div id="heart-container">
       <img
-        id="float-heart"
+        id="footer-heart"
         src="/assets/heart-circle.svg"
         alt="heart icon"
         width="65"
