--- a/pages/recipeCatalog.html
+++ b/pages/recipeCatalog.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="../globalStyles.css" />
 
+    <script src="../favorite.js"></script>
     <script src="../displayRecipe.js"></script>
   </head>
   <body>
@@ -29,7 +30,7 @@
         <li><a href="recipeCatalog.html">recipe catalog</a></li>
         <li><a href="uploadRecipe.html">upload recipe</a></li>
         <!-- if logged in, shows 'my account' -->
-        <li><a href="account.html">login/my account</a></li>
+        <li><a href="account.html">my account</a></li>
       </ul>
     </header>
 
@@ -120,7 +121,7 @@
         target="_blank"
         >My github repository</a
       >
-      <img src="/assets/heart-circle.svg" alt="heart icon" width="50" />
+      <img id="footer-heart" src="/assets/heart-circle.svg" alt="heart icon" width="50" />
     </footer>
   </body>
 </html>
