--- a/pages/uploadRecipe.html
+++ b/pages/uploadRecipe.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="../globalStyles.css" />
 
+    <script src="../favorite.js"></script>
     <script src="../login.js"></script>
     <script src="../uploadRecipe.js"></script>
   </head>
@@ -28,7 +29,7 @@
         <li><a href="recipeCatalog.html">recipe catalog</a></li>
         <li><a href="uploadRecipe.html">upload recipe</a></li>
         <!-- if logged in, shows 'my account' -->
-        <li><a href="account.html">login/my account</a></li>
+        <li><a href="account.html">my account</a></li>
       </ul>
     </header>
 
@@ -102,7 +103,7 @@ Write recipe steps here - press enter after each ingredient</textarea
         target="_blank"
         >My github repository</a
       >
-      <img src="/assets/heart-circle.svg" alt="heart icon" width="50" />
+      <img id="footer-heart" src="/assets/heart-circle.svg" alt="heart icon" width="50" />
     </footer>
   </body>
 </html>
