readme and final changes for javascript

--- a/pages/recipeCatalog.html
+++ b/pages/recipeCatalog.html
@@ -26,7 +26,7 @@
         <h1 id="make-it-good">Make it Good</h1>
       </div>
       <ul>
-        <li><a href="../index.html">home</a></li>
+        <li><a href="../home.html">home</a></li>
         <li><a href="recipeCatalog.html">recipe catalog</a></li>
         <li><a href="uploadRecipe.html">upload recipe</a></li>
         <!-- if logged in, shows 'my account' -->
@@ -119,9 +119,17 @@
       <a
         href="https://github.com/abbie-barton/startup-cs260.git"
         target="_blank"
+        class="pt-2"
         >My github repository</a
       >
-      <img id="footer-heart" src="/assets/heart-circle.svg" alt="heart icon" width="50" />
+      <div id="heart-holder" class="text-end">
+        <img
+          id="footer-heart"
+          src="/assets/heart-circle.svg"
+          alt="heart icon"
+          width="50"
+        />
+      </div>
     </footer>
   </body>
 </html>
