--- a/index.html
+++ b/index.html
@@ -63,14 +63,15 @@
       <a
         href="https://github.com/abbie-barton/startup-cs260.git"
         target="_blank"
+        class="pt-2"
         >My github repository</a
       >
-      <div id="heart-container">
+      <div id="heart-holder" class="text-end">
         <img
           id="footer-heart"
           src="/assets/heart-circle.svg"
           alt="heart icon"
-          width="65"
+          width="50"
         />
       </div>
     </footer>
