--- a/pages/recipePage.html
+++ b/pages/recipePage.html
@@ -25,7 +25,7 @@
         <h1 id="make-it-good">Make it Good</h1>
       </div>
       <ul>
-        <li><a href="../index.html">home</a></li>
+        <li><a href="../home.html">home</a></li>
         <li><a href="recipeCatalog.html">recipe catalog</a></li>
         <li><a href="uploadRecipe.html">upload recipe</a></li>
         <li><a href="account.html">my account</a></li>
@@ -104,8 +104,7 @@
 
     <!-- comments section -->
     <h4 class="px-lg-5 py-2">Comments</h4>
-    <div class="container text-start pb-4" id="comment-container">
-    </div>
+    <div class="container text-start pb-4" id="comment-container"></div>
     <div class="px-lg-5 pb-4 d-flex flex-column">
       <label for="add-comment">add comment:</label>
       <textarea
@@ -126,15 +125,23 @@ Write your comment here</textarea
       <a
         href="https://github.com/abbie-barton/startup-cs260.git"
         target="_blank"
+        class="pt-2"
         >My github repository</a
       >
-      <img id="footer-heart" src="/assets/heart-circle.svg" alt="heart icon" width="50" />
-
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"
-      ></script>
+      <div id="heart-holder" class="text-end">
+        <img
+          id="footer-heart"
+          src="/assets/heart-circle.svg"
+          alt="heart icon"
+          width="50"
+        />
+      </div>
     </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
