--- a/pages/uploadRecipe.html
+++ b/pages/uploadRecipe.html
@@ -101,9 +101,17 @@ Write recipe steps here - press enter after each ingredient</textarea
       <a
         href="https://github.com/abbie-barton/startup-cs260.git"
         target="_blank"
+        class="pt-2"
         >My github repository</a
       >
-      <img id="footer-heart" src="/assets/heart-circle.svg" alt="heart icon" width="50" />
+      <div id="heart-holder" class="text-end">
+        <img
+          id="footer-heart"
+          src="/assets/heart-circle.svg"
+          alt="heart icon"
+          width="50"
+        />
+      </div>
     </footer>
   </body>
 </html>
