adding third party api call - joke api

--- a/public/home.html
+++ b/public/home.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="globalStyles.css" />
     <script src="displayRecipe.js"></script>
     <script src="favorite.js"></script>
+    <script src="randomJoke.js"></script>
   </head>
 <body>
   <!-- header & navbar -->
@@ -101,6 +102,7 @@
             alt="placeholder img"
             width="300"
             class="pb-4"
+            id="about-img"
           />
           <p>
             We love being in the kitchen and we want to share our recipes with
