--- a/public/home.html
+++ b/public/home.html
@@ -25,9 +25,9 @@
     </div>
     <ul>
       <li><a href="home.html">home</a></li>
-      <li><a href="/pages/recipeCatalog.html">recipe catalog</a></li>
-      <li><a href="/pages/uploadRecipe.html">upload recipe</a></li>
-      <li><a href="/pages/account.html">my account</a></li>
+      <li><a href="recipeCatalog.html">recipe catalog</a></li>
+      <li><a href="uploadRecipe.html">upload recipe</a></li>
+      <li><a href="account.html">my account</a></li>
     </ul>
   </header>
 
