--- a/public/uploadRecipe.html
+++ b/public/uploadRecipe.html
@@ -25,7 +25,7 @@
         <h1 id="make-it-good">Make it Good</h1>
       </div>
       <ul>
-        <li><a href="../home.html">home</a></li>
+        <li><a href="home.html">home</a></li>
         <li><a href="recipeCatalog.html">recipe catalog</a></li>
         <li><a href="uploadRecipe.html">upload recipe</a></li>
         <!-- if logged in, shows 'my account' -->
