display most recent recipes

--- a/public/home.html
+++ b/public/home.html
@@ -39,9 +39,8 @@
           <div id="recipe-holder">
             <h2 class="py-4">Most recent recipes</h2>
             <div id="recent-recipes" class="row justify-content-start">
-              <div id="recipeCard" class="col">
+              <!-- <div id="recipeCard" class="col">
                 <a href="/pages/recipePage.html">
-                  <!-- filler image -->
                   <img
                     src="/assets/foodbaby.jpg"
                     alt="filler for image card"
@@ -50,45 +49,7 @@
                   <h4 class="recipe-title">Recipe title</h4>
                   <p class="recipe-description">recipe description</p>
                 </a>
-              </div>
-              <div id="recipeCard" class="col">
-                <a href="/pages/recipePage.html">
-                  <!-- filler image -->
-                  <img
-                    src="/assets/foodbaby.jpg"
-                    alt="filler for image card"
-                    width="300"
-                  />
-                  <h4 class="recipe-title">Recipe title</h4>
-                  <p class="recipe-description">recipe description</p>
-                </a>
-              </div>
-            </div>
-            <div id="recent-recipes" class="row g-2 justify-content-start">
-              <div id="recipeCard" class="col">
-                <a href="/pages/recipePage.html">
-                  <!-- filler image -->
-                  <img
-                    src="/assets/foodbaby.jpg"
-                    alt="filler for image card"
-                    width="300"
-                  />
-                  <h4 class="recipe-title">Recipe title</h4>
-                  <p class="recipe-description">recipe description</p>
-                </a>
-              </div>
-              <div id="recipeCard" class="col">
-                <a href="/pages/recipePage.html">
-                  <!-- filler image -->
-                  <img
-                    src="/assets/foodbaby.jpg"
-                    alt="filler for image card"
-                    width="300"
-                  />
-                  <h4 class="recipe-title">Recipe title</h4>
-                  <p class="recipe-description">recipe description</p>
-                </a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
