dynamically updating recipe page and cards

--- a/public/home.html
+++ b/public/home.html
@@ -39,17 +39,7 @@
           <div id="recipe-holder">
             <h2 class="py-4">Most recent recipes</h2>
             <div id="recent-recipes" class="row justify-content-start">
-              <!-- <div id="recipeCard" class="col">
-                <a href="/pages/recipePage.html">
-                  <img
-                    src="/assets/foodbaby.jpg"
-                    alt="filler for image card"
-                    width="300"
-                  />
-                  <h4 class="recipe-title">Recipe title</h4>
-                  <p class="recipe-description">recipe description</p>
-                </a>
-              </div> -->
+              <!-- recipe cards will be added with js -->
             </div>
           </div>
         </div>
