readme and final updates

--- a/public/recipeCatalog.html
+++ b/public/recipeCatalog.html
@@ -62,53 +62,8 @@
       <!-- recipes - maybe 12-16 per page, but I only put 4 here - sorted by most recent default -->
       <div class="container text-start py-4">
         <div class="row g-2">
-          <div id="recipeCard" class="col">
-            <a href="/pages/recipePage.html">
-              <!-- filler image -->
-              <img
-                src="/assets/foodbaby.jpg"
-                alt="filler for image card"
-                width="300"
-              />
-              <h4 class="recipe-title">Recipe title</h4>
-              <p class="recipe-description">recipe description</p>
-            </a>
-          </div>
-          <div id="recipeCard" class="col">
-            <a href="/pages/recipePage.html">
-              <!-- filler image -->
-              <img
-                src="/assets/foodbaby.jpg"
-                alt="filler for image card"
-                width="300"
-              />
-              <h4 class="recipe-title">Recipe title</h4>
-              <p class="recipe-description">recipe description</p>
-            </a>
-          </div>
-          <div id="recipeCard" class="col">
-            <a href="/pages/recipePage.html">
-              <!-- filler image -->
-              <img
-                src="/assets/foodbaby.jpg"
-                alt="filler for image card"
-                width="300"
-              />
-              <h4 class="recipe-title">Recipe title</h4>
-              <p class="recipe-description">recipe description</p>
-            </a>
-          </div>
-          <div id="recipeCard" class="col">
-            <a href="/pages/recipePage.html">
-              <!-- filler image -->
-              <img
-                src="/assets/foodbaby.jpg"
-                alt="filler for image card"
-                width="300"
-              />
-              <h4 class="recipe-title">Recipe title</h4>
-              <p class="recipe-description">recipe description</p>
-            </a>
+          <div id="recent-recipes" class="row justify-content-start">
+            <!-- recipe cards will go here -->
           </div>
         </div>
       </div>
