linking logout/signup to html

--- a/public/account.html
+++ b/public/account.html
@@ -13,8 +13,8 @@
     />
     <link rel="stylesheet" type="text/css" href="../globalStyles.css" />
 
-    <script src="../favorite.js"></script>
-    <script src="../displayRecipe.js"></script>
+    <script src="favorite.js"></script>
+    <script src="displayRecipe.js"></script>
   </head>
   <body>
     <!-- navbar -->
