--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,10 @@
         />
 
         <button type="reset" class="btn pt-2" id="login-button" onclick="login()">
-          Log in/Sign up
+          Log in
+        </button>
+        <button type="reset" class="btn pt-2" id="signup-button" onclick="signup()">
+          Sign Up
         </button>
       </form>
     </div>
