logout and connect to account page

--- a/public/index.html
+++ b/public/index.html
@@ -51,13 +51,14 @@
           required
           autocomplete="on"
         />
-
-        <button type="reset" class="btn pt-2" id="login-button" onclick="login()">
-          Log in
-        </button>
-        <button type="reset" class="btn pt-2" id="signup-button" onclick="signup()">
-          Sign Up
-        </button>
+        <div class="d-flex flex-row">
+          <button type="reset" class="btn btn-outline-dark pt-2" id="login-button" onclick="login()">
+            Log in
+          </button>
+          <button type="reset" class="btn btn-outline-dark pt-2" id="signup-button" onclick="signup()">
+            Sign Up
+          </button>
+        </div>
       </form>
     </div>
 
