--- a/public/account.html
+++ b/public/account.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../globalStyles.css" />
 
     <script src="favorite.js"></script>
-    <script src="displayRecipe.js"></script>
+    <script src="account.js"></script>
   </head>
   <body>
     <!-- navbar -->
@@ -46,16 +46,9 @@
                 width="200"
               />
             </div>
-            <h3 id="display-user" class="text-center">Best Cook in the World</h3>
+            <h3 id="display-userName" class="text-center">Best Cook in the World</h3>
             <p id="display-description" class="text-center">expert chef</p>
-            <!-- idk if i want this functionality or not -->
-            <!-- <div class="py-2">
-              <label for="update-title">Edit title</label>
-              <input type="text" name="update-title" id="update-title" />
-              <label for="update-name">Edit description</label>
-              <input type="text" name="update-name" id="update-name" />
-            </div>
-            <button class="btn" onclick="updateAccountInfo()">confirm</button> -->
+            <button type="reset" class="btn btn-outline-dark" onclick="logout()">logout</button>
           </div>
 
           <!-- contributed recipes -->
